rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__missing_semicolon_call.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (missing_semicolon_call), \"called(me)\")"
---
error: Expected ';'
  ┌─ missing_semicolon_call:1:1
  │
1 │ called(me)
  │ ^^^^^^^^^^ Expected ';'
