rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__missing_semicolon_in_block.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (missing_semicolon_in_block),\n\"{\n        foo\n    }\")"
---
error: Expected ';'
  ┌─ missing_semicolon_in_block:2:12
  │
2 │         foo
  │            ^ Expected ';'
