rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__multiple_increments.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_err :: < Statement >\n(stringify! (multiple_increments), \"x++ ++\")"
---
error: Not a valid assignment target.
  ┌─ multiple_increments:1:1
  │
1 │ x++ ++
  │ ^^^ Not a valid assignment target.
